// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordField /> should be disabled with a value 1`] = `
<Styled(TextField)
  disabled={true}
  error="Password empty"
  reveal={false}
  suffix={
    <IconLink
      icon="Visibility"
      onClick={[Function]}
    />
  }
  type="password"
/>
`;

exports[`<PasswordField /> should be the controlled value 1`] = `
<Styled(TextField)
  reveal={false}
  suffix={
    <IconLink
      icon="Visibility"
      onClick={[Function]}
    />
  }
  type="password"
  value="Some value"
/>
`;

exports[`<PasswordField /> should have a custom prefix 1`] = `
<Styled(TextField)
  defaultValue="Hello"
  prefix="Secret?"
  reveal={false}
  suffix={
    <IconLink
      icon="Visibility"
      onClick={[Function]}
    />
  }
  type="password"
/>
`;

exports[`<PasswordField /> should have a custom suffix 1`] = `
<Styled(TextField)
  defaultValue="Hello"
  reveal={false}
  suffix="Reveal!"
  type="password"
/>
`;

exports[`<PasswordField /> should render a borderless password field 1`] = `
<Styled(TextField)
  borderless={true}
  reveal={false}
  suffix={
    <IconLink
      icon="Visibility"
      onClick={[Function]}
    />
  }
  type="password"
/>
`;

exports[`<PasswordField /> should render a standard textfield 1`] = `
<Styled(TextField)
  reveal={false}
  suffix={
    <IconLink
      icon="Visibility"
      onClick={[Function]}
    />
  }
  type="password"
/>
`;
